Read sensitive data from Keychain

--- a/profiles.ini
+++ b/profiles.ini
@@ -2,6 +2,6 @@
 server = SERVER
 group = GROUP
 username = USERNAME
-password = PASSWORD
+password = PASSWORD_ID
 password2 = totp
-secret = SECRET
+secret = SECRET_ID
